fix: iframe on mobile:

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -135,4 +135,9 @@ body {
   span.m-auto {
     font-size: 0.5rem;
   }
+
+  iframe {
+    width: 100%;
+    height: auto;
+  }
 }
